# LibreGame

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Cube.mesh  LICENSE  Media.material  README.md  build.sh  export.sh  run.sh
Doc/: Doxyfile
Doc/html/: _libre_game_8h.html  _libre_game_8h_source.html  annotated.html  annotated_dup.js  class_libre_game-members.html  class_libre_game.html  class_libre_game.js  class_libre_game__inherit__graph.map  class_libre_game__inherit__graph.md5  classes.html  classlg_boton-members.html  classlg_boton.html  classlg_boton.js  classlg_bullet-members.html  classlg_bullet.html  classlg_bullet.js  classlg_bullet__inherit__graph.map  classlg_bullet__inherit__graph.md5  classlg_entidad2-members.html  classlg_entidad2.html  classlg_entidad2.js  classlg_g_u_i-members.html  classlg_g_u_i.html  classlg_g_u_i.js  classlg_g_u_i__inherit__graph.map  classlg_g_u_i__inherit__graph.md5  classlg_luces-members.html  classlg_luces.html  classlg_luces.js  classlg_ogre-members.html  classlg_ogre.html  classlg_ogre.js  classlg_ogre__inherit__graph.map  classlg_ogre__inherit__graph.md5  classlg_s_d_l-members.html  classlg_s_d_l.html  classlg_s_d_l.js  classlg_s_d_l__inherit__graph.map  classlg_s_d_l__inherit__graph.md5  classlg_x_m_l-members.html  (+72 more)
Doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.html  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+29 more)
GameApp/include/: Context.h  GameApp.h
GameApp/src/: Context.cpp  android_main.cpp  emscripten_main.cpp  escena.cpp  main.cpp
Media/: Cube.001.mesh  Cube.001.mesh.xml  Cube.mesh  Cube.mesh.xml  Cylinder.003.mesh  Diagrama_LibreGame.dia  Material_puerta.material  Pasillo_1.mesh  Piso.mesh  Piso.mesh.xml  Plane.mesh  Plane.mesh.xml  Player.material  Player.mesh  Puerta.mesh  Puerta.mesh.xml  Wall.mesh  cube.scene  material_testing.material  pasillo_1.material  plane.material  plane.scene  plugins.cfg  resources.cfg  resources_2.cfg  staf.material  superm.xml  testing.mesh  x.scene
SDK/: CMakeLists.txt  configsys.xml  escena.dtd
SDK/CMake/Templates/: AndroidManifest.xml.in
SDK/CMake/Utils/: AndroidMacros.cmake
SDK/include/: LibreGame.h  config.h  config.h.in  lgBoton.h  lgBullet.h  lgEntidad.h  lgIMGUI.h  lgLuces.h  lgOgre.h  lgSDL.h  lgSDLmixer.h  lgXML.h
SDK/include/Extra/: BtOgreExtras.h  DebugDrawOgre.h  MotionStateOgre.h  OgreSharedPtr_01.h
SDK/include/Extra/oggsound/include/: OgreOggListener.h
SDK/src/: LibreGame.cpp  cargarRecursos.cpp  imgui_impl_sdl.cpp  lgAndroidExport.cpp  lgBullet.cpp  lgControl.cpp  lgEntidad.cpp  lgEscena.cpp  lgEventos.cpp  lgGUIControl.cpp  lgGuardar.cpp  lgGuiArchivos.cpp  lgGuiExplorador.cpp  lgGuiHerramientas.cpp  lgIMGUI.cpp  lgInterfazGame.cpp  lgLuces.cpp  lgOgre.cpp  lgSDL.cpp  lgSDLmixer.cpp  lgXML.cpp  regilla.cpp
SDK/src/Extra/: DebugDrawOgre.cpp  MotionStateOgre.cpp  imgui_impl_sdl.cpp
SDK/src/Extra/imgui_impl_sdl/: imgui_impl_sdl.cpp
SDK/src/Extra/oggsound/src/: OgreOggISound.cpp  OgreOggListener.cpp
