cmake_minimum_required(VERSION 3.0.0)
project(LibreGame VERSION 0.1.0)


file(GLOB SDK ${CMAKE_SOURCE_DIR}/SDK/src/*.cpp)
file(GLOB Extra ${CMAKE_SOURCE_DIR}/SDK/src/Extra/*.cpp)
file(GLOB Bullet3 ${CMAKE_SOURCE_DIR}/Base/bullet3/*.cpp)
file(GLOB oggSound ${CMAKE_SOURCE_DIR}/SDK/src/Extra/oggsound/src/*.cpp)
if (ANDROID)
add_library(OpenAL STATIC IMPORTED)
set_property(TARGET OpenAL PROPERTY IMPORTED_LOCATION /home/rgr/LibreGame/android/Base/openal-soft-master/libopenal.so)
add_library(vorbisfile STATIC IMPORTED)
set_property(TARGET vorbisfile PROPERTY IMPORTED_LOCATION /home/rgr/LibreGame/android/Base/ogre-master_and/lib/libvorbis.a)
add_library(ogg STATIC IMPORTED)
set_property(TARGET ogg PROPERTY IMPORTED_LOCATION /home/rgr/LibreGame/android/Base/ogre-master_and/lib/libogg.a)
endif()
add_library(LibreGame src/LibreGame.cpp ${SDK} ${Bullet3} ${Extra} ${oggSound})
target_link_libraries(LibreGame OgreMain OgreBites OgreRTShaderSystem OgreTerrain OpenAL vorbisfile ogg)
if ( NOT ANDROID)
target_link_libraries(LibreGame SDL2)
target_link_libraries(LibreGame OpenAL)
target_link_libraries(LibreGame vorbisfile)
endif()
target_include_directories(LibreGame PUBLIC ${CMAKE_SOURCE_DIR}/SDK/include)
target_include_directories(LibreGame PUBLIC ${CMAKE_SOURCE_DIR}/SDK/include/Extra)
target_include_directories(LibreGame PUBLIC ${CMAKE_SOURCE_DIR}/SDK/include/Extra/oggsound/include)
target_include_directories(LibreGame PUBLIC ${CMAKE_SOURCE_DIR}/SDK/include/Extra/ogg/include)
target_include_directories(LibreGame PUBLIC ${CMAKE_SOURCE_DIR}/SDK/include/Extra/vorbis)
target_include_directories(LibreGame PUBLIC ${CMAKE_SOURCE_DIR}/Base/bullet3)