cmake_minimum_required(VERSION 3.0.0)
project(LibreGame VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if ( NOT ANDROID)
file(GLOB imgui_impl ${CMAKE_SOURCE_DIR}/SDK/src/Extra/imgui_impl_sdl/*.cpp)
endif()
file(GLOB SDK ${CMAKE_SOURCE_DIR}/SDK/src/*.cpp)
file(GLOB Extra ${CMAKE_SOURCE_DIR}/SDK/src/Extra/*.cpp)
file(GLOB Bullet3 ${CMAKE_SOURCE_DIR}/SDK/include/Extra/bullet3/*.cpp)
file(GLOB oggSound ${CMAKE_SOURCE_DIR}/SDK/src/Extra/oggsound/src/*.cpp)
file(GLOB LibreXML ${CMAKE_SOURCE_DIR}/SDK/include/Extra/tinyxml2/*.cpp)
add_library(LibreGame src/LibreGame.cpp ${SDK} ${Bullet3} ${imgui_impl} ${Extra} ${oggSound} ${LibreXML})
install(TARGETS LibreGame DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
target_link_libraries(LibreGame OgreMain OgreBites OgreRTShaderSystem OgreTerrain OpenAL vorbisfile)
if ( NOT ANDROID)
target_link_libraries(LibreGame stdc++fs)
target_link_libraries(LibreGame OpenAL)
target_link_libraries(LibreGame SDL2)
target_link_libraries(LibreGame SDL2_mixer)
target_link_libraries(LibreGame vorbisfile)
endif()
target_include_directories(LibreGame PUBLIC ${CMAKE_SOURCE_DIR}/SDK/include)
target_include_directories(LibreGame PUBLIC ${CMAKE_SOURCE_DIR}/SDK/include/Extra)
target_include_directories(LibreGame PUBLIC ${CMAKE_SOURCE_DIR}/SDK/include/Extra/oggsound/include)
target_include_directories(LibreGame PUBLIC ${CMAKE_SOURCE_DIR}/SDK/include/Extra/ogg/include)
target_include_directories(LibreGame PUBLIC ${CMAKE_SOURCE_DIR}/SDK/include/Extra/vorbis)
target_include_directories(LibreGame PUBLIC ${CMAKE_SOURCE_DIR}/SDK/include/Extra/bullet3)
target_include_directories(LibreGame PUBLIC ${CMAKE_SOURCE_DIR}/SDK/include/Extra/tinyxml2)
